DOC: Add warning items in ifrs17sim notebook

--- a/lifelib/projects/ifrs17sim/ifrs17sim-demo.ipynb
+++ b/lifelib/projects/ifrs17sim/ifrs17sim-demo.ipynb
@@ -24,14 +24,17 @@
     "\n",
     "**Warning:**\n",
     "\n",
-    "The primary purpose of this model is to showcase the capability of [lifelib] and its base system [modelx], and less attention has been paid to the accuracy of the model or the compliance with the accounting standards. At very least, following points should be raised.\n",
+    "The primary purpose of this model is to showcase the capability of [lifelib] and its base system [modelx], and less attention has been paid to the accuracy of the model or the compliance with the accounting standards. \n",
+    "At very least, following items are identified as over-simplification or lack of implementation.\n",
     "\n",
     "<ul>\n",
     "  <li>The timing of cashflows is either the beginning or end of each step.</li>\n",
-    "  <li>For the moment, all expenses are included in insurance cashflows.</li>\n",
+    "  <li>All expenses are included in insurance cashflows.</li>\n",
     "  <li>Loss component logic is not yet incorporated, so `CSM_Unfloored` can be negative.</li>\n",
+    "  <li>Coverage unit is set to sum assured</li>\n",
+    "  <li>Amortization of acquisition cash flows is not yet implemented.</li>\n",
     "  <li>All insurance cashflows are considered non-market sensitive, i.e. no TVOG is considered.</li>\n",
-    "  <li>Risk adjustment is not modeled yet.</li>\n",
+    "  <li>Risk adjustment is not yet modeled.</li>\n",
     "</ul>\n",
     "\n",
     "</div>\n",
