DOC: Rename ifrs17sim-demo notebook to ifrs17sim_csm_waterfall

--- a/lifelib/projects/ifrs17sim/ifrs17sim_csm_waterfall.ipynb
+++ b/lifelib/projects/ifrs17sim/ifrs17sim_csm_waterfall.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Welcome to ifrs17sim example notebook!\n",
+    "# IFRS17 CSM Waterfall Chart Notebook\n",
     "To run this notebook and get all the outputs below, Go to the **Cell** menu above, and then click **Run All**.\n"
    ]
   },
