ENH: Add notebook for ifrs_waterfall

--- a/lifelib/projects/ifrs17sim/ifrs17sim_ifrs_waterfall.ipynb
+++ b/lifelib/projects/ifrs17sim/ifrs17sim_ifrs_waterfall.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# IFRS17 CSM Waterfall Chart Notebook\n",
-    "To run this notebook and get all the outputs below, Go to the **Cell** menu above, and then click **Run All**.\n"
+    "# IFRS17 waterfall chart notebook\n",
+    "To run this notebook and get all the outputs below, Go to the **Cell** menu above, and then click **Run All**."
    ]
   },
   {
@@ -14,8 +14,15 @@
    "source": [
     "## About this notebook\n",
     "\n",
-    "This noteook demonstrates the usage of [ifrs17sim] project in [lifelib], by building and running a model and drawing a waterfall graph of CSM amortization on a single modelpoint.\n",
+    "This noteook demonstrates the usage of [ifrs17sim] project in [lifelib], by building and running a model and drawing waterfall graphs that depict how balancesheet items change and cashflows emerge over one or multiple periods using cashflows of a single modelpoint.\n",
     "\n",
+    "Those charts are:\n",
+    "* Present value of expected cashflows\n",
+    "* CSM amortization\n",
+    "* Actual cashflows\n",
+    "* IFRS17 Financial performance\n",
+    "\n",
+    "under the senario that actual cashflows are equal to expected. \n",
     "\n",
     "[ifrs17sim]: http://lifelib.io/projects/ifrs17sim.html\n",
     "[lifelib]: http://lifelib.io\n",
@@ -58,39 +65,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The entire script\n",
-    "Below is the entire script of this example. The enire scipt is broken down to several parts in differenc cells, and each part is explained below. The pieces of code in cells below are executable one after another from the top.\n",
-    "\n",
-    "```python\n",
-    "%matplotlib notebook\n",
-    "import collections\n",
-    "import pandas as pd\n",
-    "from draw_charts import draw_waterfall\n",
-    "import ifrs17sim\n",
-    "\n",
-    "model = ifrs17sim.build()\n",
-    "\n",
-    "proj = model.OuterProjection[1]\n",
-    "proj.CSM_Unfloored(15)\n",
-    "\n",
-    "data = collections.OrderedDict()\n",
-    "for cells in ['CSM_Unfloored',\n",
-    "              'IntAccrCSM',\n",
-    "              'AdjCSM_FulCashFlows',\n",
-    "              'TransServices']:\n",
-    "    data[cells] = [proj.cells[cells](t) for t in range(15)]\n",
-    "\n",
-    "df = pd.DataFrame(data)\n",
-    "df['TransServices'] = -1 * df['TransServices']\n",
-    "\n",
-    "draw_waterfall(df)\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Initial set-up\n",
     "\n",
     "The first line `%matplotlib notebook`, is for specifying drawing mode.\n",
@@ -109,8 +83,10 @@
    "outputs": [],
    "source": [
     "%matplotlib notebook\n",
-    "import collections\n",
     "import pandas as pd\n",
+    "import collections\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "import ifrs17sim\n",
     "from draw_charts import draw_waterfall"
    ]
@@ -125,35 +101,7 @@
     "\n",
     "By supplying `True` to `load_saved` parameter of the `build` function, the input data is read from `ifrs17sim.mx`, the 'pickled' file to save loading time. To read input from `input.xlsm`, call `build` with `load_saved=False` or without any parameter because `False` is the default value of `load_saved`. \n",
     "\n",
-    "If you run this code multiple time, the previous model is renamed to `ifrs17sim_BAK*`, and a new model is created and returned as `model`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "model = ifrs17sim.build(load_saved=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To see what space is inside `model`, execute `model.spaces` in an empty cell.\n",
-    "```python\n",
-    "model.spaces\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Calculating CSM\n",
+    "If you run this code multiple time, the previous model is renamed to `ifrs17sim_BAK*`, and a new model is created and returned as `model`.\n",
     "\n",
     "In `model` thre is a space called `OuterProjection` and other spaces. `OuterProjection` is parametrized by Policy ID, i.e. each of the spaces with parameters corresponds to a projection of one policy. For example, `model.OuterProjection[1]` return the projection of policy ID 1, `model.OuterProjection[171]` return the projection of policy ID 171.\n",
     "\n",
@@ -171,6 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "model = ifrs17sim.build(True)\n",
     "proj = model.OuterProjection[1]"
    ]
   },
@@ -178,21 +127,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exporting values into DataFrame\n",
+    "## Present value of expected cashflows\n",
     "\n",
-    "The code below is to construct a DataFrame object containing data for drawing the waterfall chart, from the cells that make up bars in the waterfall chart.\n",
-    "\n",
-    "The values of the cells are first imported to an ordered dictonary `data`, which is a mapping of cell names to their vectors of values, then the DataFrame object `df` is created from `data`.\n",
-    "\n",
-    "The last line is to change the sign of `TransServices` values, as we want to draw them as negative values that push down the CSM balance."
+    "The code below generate a waterfall chart that shows how the present value of expected insurance cashflows unwinds over time. No adjustment is made to match actual in-force and no changes in assumptions are made."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = collections.OrderedDict()\n",
+    "for cells in ['PV_FutureCashflow',\n",
+    "              'ExpectedPremium',\n",
+    "              'ExpectedInterestCashflow',\n",
+    "              'ExpectedAcqCashflow',\n",
+    "              'ExpectedClaims',\n",
+    "              'ExpectedExps']:\n",
+    "    data[cells] = [proj.cells[cells](t) for t in range(3)]\n",
+    "\n",
+    "estcf = pd.DataFrame(data)\n",
+    "\n",
+    "for inflow in ['ExpectedPremium']:\n",
+    "    estcf[inflow] = -1 * estcf[inflow] \n",
+    "\n",
+    "plt.figure()\n",
+    "draw_waterfall(estcf, title='Expected Cashflows')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CSM amortization\n",
+    "\n",
+    "The CSM amortization chart below depicts items that increase/decrease CSM balance under the senario that actual cashflows are equal to expected. \n",
+    "The chart below is explained in more details in another notebook."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "data = collections.OrderedDict()\n",
@@ -200,35 +177,23 @@
     "              'IntAccrCSM',\n",
     "              'AdjCSM_FulCashFlows',\n",
     "              'TransServices']:\n",
-    "    data[cells] = [proj.cells[cells](t) for t in range(15)]\n",
+    "    data[cells] = [proj.cells[cells](t) for t in range(3)]\n",
+    "\n",
     "\n",
     "df = pd.DataFrame(data)\n",
-    "df['TransServices'] = -1 * df['TransServices']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Tha table below show the DataFrame values."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Draw waterfall chart\n",
+    "df['TransServices'] = -1 * df['TransServices']\n",
     "\n",
-    "The last line is to draw the waterfall graph. The function to draw the graph was imported from the separate module `draw_charts` in this project directory, and was imported at the first part of this script."
+    "plt.figure()\n",
+    "draw_waterfall(df, title='CSM Amortization')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Actual cashflows\n",
+    "\n",
+    "The code below generate a waterfall chart that simulate actual insurance cashflows that are assumed to be equal to the expected. The net cashflow of each period is withheld as accumulated cashflow and credited with interests at the same rate as the discount rate."
    ]
   },
   {
@@ -237,7 +202,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "draw_waterfall(df)"
+    "data = collections.OrderedDict()\n",
+    "for cells in ['prj_AccumCashflow',\n",
+    "              'prj_incm_Premium',\n",
+    "              'prj_InterestAccumCashflow',\n",
+    "              'prj_exps_AcqTotal',\n",
+    "              'prj_bnft_Total',\n",
+    "              'prj_exps_MaintTotal']: \n",
+    "    data[cells] = [proj.cells[cells](t) for t in range(3)]\n",
+    "    \n",
+    "actcf = pd.DataFrame(data)\n",
+    "for outflow in ['prj_exps_AcqTotal',\n",
+    "                'prj_bnft_Total',\n",
+    "                'prj_exps_MaintTotal']:\n",
+    "    actcf[outflow] = -1 * actcf[outflow]\n",
+    "    \n",
+    "plt.figure()\n",
+    "draw_waterfall(actcf, title='Actual Cashflows')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## IFRS17 Financial performance\n",
+    "\n",
+    "The chart below simulates P&L accounts based on IFRS17 from the background data used to draw the charts above. The profit in each period is retained and accumulated as `NetBalance`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = collections.OrderedDict()\n",
+    "for cells in ['NetBalance',\n",
+    "              'InsRevenue',\n",
+    "              'InsServiceExps',\n",
+    "              'InsFinanceIncomeExps']:\n",
+    "    data[cells] = [proj.cells[cells](t) for t in range(5)]    \n",
+    "\n",
+    "\n",
+    "ifrspl = pd.DataFrame(data)\n",
+    "for pl in ['InsServiceExps']:\n",
+    "    ifrspl[pl] = -1 * ifrspl[pl]\n",
+    "\n",
+    "plt.figure()\n",
+    "draw_waterfall(ifrspl, title='IFRS17 Profit/Loss')"
    ]
   }
  ],
