--- a/lifelib/projects/ifrs17sim/ifrs17sim_ifrs_waterfall.ipynb
+++ b/lifelib/projects/ifrs17sim/ifrs17sim_ifrs_waterfall.ipynb
@@ -119,7 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = ifrs17sim.build(True)\n",
+    "model = ifrs17sim.build(load_saved=False)\n",
     "proj = model.OuterProjection[1]"
    ]
   },
