NBK: Update notebooks with to_frame

--- a/lifelib/projects/ifrs17sim/ifrs17sim_csm_waterfall.ipynb
+++ b/lifelib/projects/ifrs17sim/ifrs17sim_csm_waterfall.ipynb
@@ -73,14 +73,11 @@
     "proj = model.OuterProjection[1]\n",
     "proj.CSM_Unfloored(15)\n",
     "\n",
-    "data = collections.OrderedDict()\n",
-    "for cells in ['CSM_Unfloored',\n",
-    "              'IntAccrCSM',\n",
-    "              'AdjCSM_FulCashFlows',\n",
-    "              'TransServices']:\n",
-    "    data[cells] = [proj.cells[cells](t) for t in range(15)]\n",
+    "df = proj.cells['CSM_Unfloored',   \n",
+    "                'IntAccrCSM',\n",
+    "                'AdjCSM_FulCashFlows',\n",
+    "                'TransServices'].to_frame(range(15))\n",
     "\n",
-    "df = pd.DataFrame(data)\n",
     "df['TransServices'] = -1 * df['TransServices']\n",
     "\n",
     "draw_waterfall(df)\n",
@@ -131,9 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "model = ifrs17sim.build(load_saved=True)"
@@ -168,7 +163,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "proj = model.OuterProjection[1]"
@@ -180,9 +177,7 @@
    "source": [
     "## Exporting values into DataFrame\n",
     "\n",
-    "The code below is to construct a DataFrame object containing data for drawing the waterfall chart, from the cells that make up bars in the waterfall chart.\n",
-    "\n",
-    "The values of the cells are first imported to an ordered dictonary `data`, which is a mapping of cell names to their vectors of values, then the DataFrame object `df` is created from `data`.\n",
+    "The code below is to construct a DataFrame object for drawing the waterfall chart, from the cells that make up bars in the waterfall chart.\n",
     "\n",
     "The last line is to change the sign of `TransServices` values, as we want to draw them as negative values that push down the CSM balance."
    ]
@@ -195,14 +190,11 @@
    },
    "outputs": [],
    "source": [
-    "data = collections.OrderedDict()\n",
-    "for cells in ['CSM_Unfloored',\n",
-    "              'IntAccrCSM',\n",
-    "              'AdjCSM_FulCashFlows',\n",
-    "              'TransServices']:\n",
-    "    data[cells] = [proj.cells[cells](t) for t in range(15)]\n",
+    "df = proj.cells['CSM_Unfloored',   \n",
+    "                'IntAccrCSM',\n",
+    "                'AdjCSM_FulCashFlows',\n",
+    "                'TransServices'].to_frame(range(15))\n",
     "\n",
-    "df = pd.DataFrame(data)\n",
     "df['TransServices'] = -1 * df['TransServices']"
    ]
   },
