Update plots with to_frame

--- a/lifelib/projects/ifrs17sim/ifrs17sim_ifrs_waterfall.ipynb
+++ b/lifelib/projects/ifrs17sim/ifrs17sim_ifrs_waterfall.ipynb
@@ -138,19 +138,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = collections.OrderedDict()\n",
-    "for cells in ['PV_FutureCashflow',\n",
-    "              'ExpectedPremium',\n",
-    "              'ExpectedInterestCashflow',\n",
-    "              'ExpectedAcqCashflow',\n",
-    "              'ExpectedClaims',\n",
-    "              'ExpectedExps']:\n",
-    "    data[cells] = [proj.cells[cells](t) for t in range(3)]\n",
+    "estcf = proj.cells['PV_FutureCashflow',\n",
+    "                   'ExpectedPremium',\n",
+    "                   'ExpectedInterestCashflow',\n",
+    "                   'ExpectedAcqCashflow',\n",
+    "                   'ExpectedClaims',\n",
+    "                   'ExpectedExps'].to_frame(range(3))\n",
     "\n",
-    "estcf = pd.DataFrame(data)\n",
-    "\n",
-    "for inflow in ['ExpectedPremium']:\n",
-    "    estcf[inflow] = -1 * estcf[inflow] \n",
+    "estcf['ExpectedPremium'] = -1 * estcf['ExpectedPremium'] \n",
     "\n",
     "plt.figure()\n",
     "draw_waterfall(estcf, title='Expected Cashflows')"
@@ -172,15 +167,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = collections.OrderedDict()\n",
-    "for cells in ['CSM_Unfloored',\n",
-    "              'IntAccrCSM',\n",
-    "              'AdjCSM_FulCashFlows',\n",
-    "              'TransServices']:\n",
-    "    data[cells] = [proj.cells[cells](t) for t in range(3)]\n",
+    "df = proj.cells['CSM_Unfloored',\n",
+    "                'IntAccrCSM',\n",
+    "                'AdjCSM_FulCashFlows',\n",
+    "                'TransServices'].to_frame(range(3))\n",
     "\n",
-    "\n",
-    "df = pd.DataFrame(data)\n",
+    "df['TransServices'] = -1 * df['TransServices']\n",
     "df['TransServices'] = -1 * df['TransServices']\n",
     "\n",
     "plt.figure()\n",
@@ -202,16 +194,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = collections.OrderedDict()\n",
-    "for cells in ['prj_AccumCashflow',\n",
-    "              'prj_incm_Premium',\n",
-    "              'prj_InterestAccumCashflow',\n",
-    "              'prj_exps_AcqTotal',\n",
-    "              'prj_bnft_Total',\n",
-    "              'prj_exps_MaintTotal']: \n",
-    "    data[cells] = [proj.cells[cells](t) for t in range(3)]\n",
-    "    \n",
-    "actcf = pd.DataFrame(data)\n",
+    "actcf = proj.cells['prj_AccumCashflow',\n",
+    "                   'prj_incm_Premium',\n",
+    "                   'prj_InterestAccumCashflow',\n",
+    "                   'prj_exps_AcqTotal',\n",
+    "                   'prj_bnft_Total',\n",
+    "                   'prj_exps_MaintTotal'].to_frame(range(3))\n",
+    "\n",
     "for outflow in ['prj_exps_AcqTotal',\n",
     "                'prj_bnft_Total',\n",
     "                'prj_exps_MaintTotal']:\n",
@@ -236,17 +225,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = collections.OrderedDict()\n",
-    "for cells in ['NetBalance',\n",
-    "              'InsRevenue',\n",
-    "              'InsServiceExps',\n",
-    "              'InsFinanceIncomeExps']:\n",
-    "    data[cells] = [proj.cells[cells](t) for t in range(5)]    \n",
+    "ifrspl = proj.cells['NetBalance',\n",
+    "                    'InsRevenue',\n",
+    "                    'InsServiceExps',\n",
+    "                    'InsFinanceIncomeExps'].to_frame(range(5))\n",
     "\n",
-    "\n",
-    "ifrspl = pd.DataFrame(data)\n",
-    "for pl in ['InsServiceExps']:\n",
-    "    ifrspl[pl] = -1 * ifrspl[pl]\n",
+    "ifrspl['InsServiceExps'] = -1 * ifrspl['InsServiceExps']\n",
     "\n",
     "plt.figure()\n",
     "draw_waterfall(ifrspl, title='IFRS17 Profit/Loss')"
