--- a/lifelib/projects/simplelife/simplelife-demo.ipynb
+++ b/lifelib/projects/simplelife/simplelife-demo.ipynb
@@ -22,7 +22,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -32,16 +31,29 @@
     "==========================\n",
     "\n",
     "Draw a graph of liability cashflows of a simple whole life policy\n",
-    "\"\"\"\n",
-    "import modelx as mx\n",
     "\n",
-    "try:\n",
-    "    import simplelife.simplelife as simplelife\n",
-    "except ImportError:\n",
-    "    import simplelife\n",
+    "*Run this sample now!* |binder simplelife_demo|\n",
+    "\n",
+    ".. include:: /binderlinks.rst\n",
+    "   :start-after: Begin binder simplelife_demo\n",
+    "   :end-before: End binder simplelife_demo\n",
+    "\n",
+    "\"\"\"\n",
+    "import pandas as pd\n",
+    "import modelx as mx\n",
+    "import seaborn as sns\n",
+    "sns.set()\n",
+    "\n",
+    "import simplelife\n",
     "\n",
     "polid = 171\n",
-    "proj = simplelife.build(load_saved=True).Projection[polid]\n",
+    "proj = simplelife.build(True).Projection[polid]\n",
+    "\n",
+    "# %% Draw NetCashflows Graph\n",
+    "data = {'NetCashflows': [proj.prj_NetLiabilityCashflow[t] for t in range(50)]}\n",
+    "ax = pd.DataFrame(data).plot.line(marker='o', color='r')\n",
+    "\n",
+    "# %% Draw componets of net cashflows\n",
     "\n",
     "vars = ['prj_incm_Premium',\n",
     "        'prj_bnft_Surrender',\n",
@@ -50,29 +62,11 @@
     "        'prj_exps_CommTotal',\n",
     "        'prj_exps_Acq']\n",
     "\n",
-    "for cells in vars:\n",
-    "    list(proj.cells[cells](t) for t in range(50))\n",
     "\n",
-    "list(proj.prj_NetLiabilityCashflow[t] for t in range(50))\n",
+    "df = proj.cells[vars].to_frame(range(50))\n",
     "\n",
-    "\n",
-    "# %% Code block for drawing graph\n",
-    "import seaborn as sns\n",
-    "sns.set()\n",
-    "\n",
-    "def draw_cashflow(proj):   \n",
-    "    \n",
-    "    cfs = proj.frame[vars].sort_index().dropna()\n",
-    "    cfs[vars[1:]] = cfs[vars[1:]].mul(-1)   # Change outflows to negatives\n",
-    "    \n",
-    "    ncf = proj.prj_NetLiabilityCashflow.frame.sort_index()\n",
-    "\n",
-    "    axes = ncf.plot.line(marker='o', color='r')\n",
-    "    cfs.plot(kind='bar', stacked=True, ax=axes)\n",
-    "\n",
-    "# %% Main\n",
-    "if __name__ == '__main__':\n",
-    "    draw_cashflow(proj)\n"
+    "df[vars[1:]] = df[vars[1:]].mul(-1)   # Change outflows to negatives\n",
+    "df.plot(kind='bar', stacked=True, ax=ax, title='Insurance Cashflows')"
    ]
   }
  ],
