ENH: Rename cells, spaces, modules, inputs to follow naming convention

--- a/lifelib/projects/ifrs17sim/ifrs17sim_csm_waterfall.ipynb
+++ b/lifelib/projects/ifrs17sim/ifrs17sim_csm_waterfall.ipynb
@@ -70,12 +70,12 @@
     "\n",
     "model = ifrs17sim.build()\n",
     "\n",
-    "proj = model.OuterProjection[1]\n",
+    "proj = model.OuterProj[1]\n",
     "proj.CSM_Unfloored(15)\n",
     "\n",
     "df = proj.cells['CSM_Unfloored',   \n",
     "                'IntAccrCSM',\n",
-    "                'AdjCSM_FulCashFlows',\n",
+    "                'AdjCSM_FlufCF',\n",
     "                'TransServices'].to_frame(range(15))\n",
     "\n",
     "df['TransServices'] = -1 * df['TransServices']\n",
@@ -150,7 +150,7 @@
    "source": [
     "## Calculating CSM\n",
     "\n",
-    "In `model` thre is a space called `OuterProjection` and other spaces. `OuterProjection` is parametrized by Policy ID, i.e. each of the spaces with parameters corresponds to a projection of one policy. For example, `model.OuterProjection[1]` return the projection of policy ID 1, `model.OuterProjection[171]` return the projection of policy ID 171.\n",
+    "In `model` thre is a space called `OuterProj` and other spaces. `OuterProj` is parametrized by Policy ID, i.e. each of the spaces with parameters corresponds to a projection of one policy. For example, `model.OuterProj[1]` return the projection of policy ID 1, `model.OuterProj[171]` return the projection of policy ID 171.\n",
     "\n",
     "The first line below sets `proj` as a shorthand for the projection of Policy ID 1. To see what cells are in `proj`, execute `proj.cells` in an empty cell. \n",
     "```python\n",
@@ -168,7 +168,7 @@
    },
    "outputs": [],
    "source": [
-    "proj = model.OuterProjection[1]"
+    "proj = model.OuterProj[1]"
    ]
   },
   {
@@ -192,7 +192,7 @@
    "source": [
     "df = proj.cells['CSM_Unfloored',   \n",
     "                'IntAccrCSM',\n",
-    "                'AdjCSM_FulCashFlows',\n",
+    "                'AdjCSM_FlufCF',\n",
     "                'TransServices'].to_frame(range(15))\n",
     "\n",
     "df['TransServices'] = -1 * df['TransServices']"
