--- a/lifelib/projects/simplelife/simplelife-demo.ipynb
+++ b/lifelib/projects/simplelife/simplelife-demo.ipynb
@@ -55,7 +55,7 @@
     "\n",
     "# %% Draw componets of net cashflows\n",
     "\n",
-    "vars = ['prj_incm_Premium',\n",
+    "vars = ['Premium',\n",
     "        'prj_bnft_Surrender',\n",
     "        'prj_bnft_Death',\n",
     "        'prj_exps_Maint',\n",
