--- a/lifelib/projects/ifrs17sim/ifrs17sim_ifrs_waterfall.ipynb
+++ b/lifelib/projects/ifrs17sim/ifrs17sim_ifrs_waterfall.ipynb
@@ -119,7 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = ifrs17sim.build(load_saved=False)\n",
+    "model = ifrs17sim.build(load_saved=True)\n",
     "proj = model.OuterProj[1]"
    ]
   },
@@ -172,7 +172,6 @@
     "                'AdjCSM_FlufCF',\n",
     "                'TransServices'].to_frame(range(3))\n",
     "\n",
-    "df['TransServices'] = -1 * df['TransServices']\n",
     "df['TransServices'] = -1 * df['TransServices']\n",
     "\n",
     "plt.figure()\n",
