--- a/lifelib/projects/ifrs17sim/ifrs17sim_ifrs_waterfall.ipynb
+++ b/lifelib/projects/ifrs17sim/ifrs17sim_ifrs_waterfall.ipynb
@@ -103,7 +103,7 @@
     "\n",
     "If you run this code multiple time, the previous model is renamed to `ifrs17sim_BAK*`, and a new model is created and returned as `model`.\n",
     "\n",
-    "In `model` thre is a space called `OuterProjection` and other spaces. `OuterProjection` is parametrized by Policy ID, i.e. each of the spaces with parameters corresponds to a projection of one policy. For example, `model.OuterProjection[1]` return the projection of policy ID 1, `model.OuterProjection[171]` return the projection of policy ID 171.\n",
+    "In `model` thre is a space called `OuterProj` and other spaces. `OuterProj` is parametrized by Policy ID, i.e. each of the spaces with parameters corresponds to a projection of one policy. For example, `model.OuterProj[1]` return the projection of policy ID 1, `model.OuterProj[171]` return the projection of policy ID 171.\n",
     "\n",
     "The first line below sets `proj` as a shorthand for the projection of Policy ID 1. To see what cells are in `proj`, execute `proj.cells` in an empty cell. \n",
     "```python\n",
@@ -119,8 +119,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = ifrs17sim.build(load_saved=False)\n",
-    "proj = model.OuterProjection[1]"
+    "model = ifrs17sim.build(load_saved=True)\n",
+    "proj = model.OuterProj[1]"
    ]
   },
   {
@@ -138,14 +138,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "estcf = proj.cells['PV_FutureCashflow',\n",
-    "                   'ExpectedPremium',\n",
-    "                   'ExpectedInterestCashflow',\n",
-    "                   'ExpectedAcqCashflow',\n",
-    "                   'ExpectedClaims',\n",
-    "                   'ExpectedExps'].to_frame(range(3))\n",
+    "estcf = proj.cells['PV_FutureCF',\n",
+    "                   'EstPremIncome',\n",
+    "                   'EstIntOnCF',\n",
+    "                   'EstAcqCashflow',\n",
+    "                   'EstClaim',\n",
+    "                   'EstExps'].to_frame(range(3))\n",
     "\n",
-    "estcf['ExpectedPremium'] = -1 * estcf['ExpectedPremium'] \n",
+    "estcf['EstPremIncome'] = -1 * estcf['EstPremIncome'] \n",
     "\n",
     "plt.figure()\n",
     "draw_waterfall(estcf, title='Expected Cashflows')"
@@ -169,10 +169,9 @@
    "source": [
     "df = proj.cells['CSM_Unfloored',\n",
     "                'IntAccrCSM',\n",
-    "                'AdjCSM_FulCashFlows',\n",
+    "                'AdjCSM_FlufCF',\n",
     "                'TransServices'].to_frame(range(3))\n",
     "\n",
-    "df['TransServices'] = -1 * df['TransServices']\n",
     "df['TransServices'] = -1 * df['TransServices']\n",
     "\n",
     "plt.figure()\n",
@@ -194,16 +193,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "actcf = proj.cells['prj_AccumCashflow',\n",
-    "                   'prj_incm_Premium',\n",
-    "                   'prj_InterestAccumCashflow',\n",
-    "                   'prj_exps_AcqTotal',\n",
-    "                   'prj_bnft_Total',\n",
-    "                   'prj_exps_MaintTotal'].to_frame(range(3))\n",
+    "actcf = proj.cells['AccumCF',\n",
+    "                   'PremIncome',\n",
+    "                   'IntAccumCF',\n",
+    "                   'ExpsAcqTotal',\n",
+    "                   'BenefitTotal',\n",
+    "                   'ExpsMaintTotal'].to_frame(range(3))\n",
     "\n",
-    "for outflow in ['prj_exps_AcqTotal',\n",
-    "                'prj_bnft_Total',\n",
-    "                'prj_exps_MaintTotal']:\n",
+    "for outflow in ['ExpsAcqTotal',\n",
+    "                'BenefitTotal',\n",
+    "                'ExpsMaintTotal']:\n",
     "    actcf[outflow] = -1 * actcf[outflow]\n",
     "    \n",
     "plt.figure()\n",
@@ -226,11 +225,11 @@
    "outputs": [],
    "source": [
     "ifrspl = proj.cells['NetBalance',\n",
-    "                    'InsRevenue',\n",
-    "                    'InsServiceExps',\n",
-    "                    'InsFinanceIncomeExps'].to_frame(range(5))\n",
+    "                    'InsurRevenue',\n",
+    "                    'InsurServiceExps',\n",
+    "                    'InsurFinIncomeExps'].to_frame(range(5))\n",
     "\n",
-    "ifrspl['InsServiceExps'] = -1 * ifrspl['InsServiceExps']\n",
+    "ifrspl['InsurServiceExps'] = -1 * ifrspl['InsurServiceExps']\n",
     "\n",
     "plt.figure()\n",
     "draw_waterfall(ifrspl, title='IFRS17 Profit/Loss')"
