--- a/lifelib/projects/simplelife/simplelife-demo.ipynb
+++ b/lifelib/projects/simplelife/simplelife-demo.ipynb
@@ -22,6 +22,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
@@ -39,28 +40,29 @@
     "   :end-before: End binder simplelife_demo\n",
     "\n",
     "\"\"\"\n",
-    "import pandas as pd\n",
     "import modelx as mx\n",
+    "import pandas as pd\n",
     "import seaborn as sns\n",
     "sns.set()\n",
     "\n",
     "import simplelife\n",
     "\n",
+    "\n",
     "polid = 171\n",
-    "proj = simplelife.build(True).Projection[polid]\n",
+    "proj = simplelife.build(load_saved=True).Projection[polid]\n",
     "\n",
     "# %% Draw NetCashflows Graph\n",
-    "data = {'NetCashflows': [proj.prj_NetLiabilityCashflow[t] for t in range(50)]}\n",
+    "data = {'NetCashflows': [proj.NetInsurCF[t] for t in range(50)]}\n",
     "ax = pd.DataFrame(data).plot.line(marker='o', color='r')\n",
     "\n",
     "# %% Draw componets of net cashflows\n",
     "\n",
-    "vars = ['prj_incm_Premium',\n",
-    "        'prj_bnft_Surrender',\n",
-    "        'prj_bnft_Death',\n",
-    "        'prj_exps_Maint',\n",
-    "        'prj_exps_CommTotal',\n",
-    "        'prj_exps_Acq']\n",
+    "vars = ['PremIncome',\n",
+    "        'BenefitSurr',\n",
+    "        'BenefitDeath',\n",
+    "        'ExpsMaint',\n",
+    "        'ExpsCommTotal',\n",
+    "        'ExpsAcq']\n",
     "\n",
     "\n",
     "df = proj.cells[vars].to_frame(range(50))\n",
@@ -87,7 +89,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.4.4"
   }
  },
  "nbformat": 4,
