DOC: Change URL to HTTPS

--- a/lifelib/projects/ifrs17sim/ifrs17sim_csm_waterfall.ipynb
+++ b/lifelib/projects/ifrs17sim/ifrs17sim_csm_waterfall.ipynb
@@ -17,8 +17,8 @@
     "This noteook demonstrates the usage of [ifrs17sim] project in [lifelib], by building and running a model and drawing a waterfall graph of CSM amortization on a single modelpoint.\n",
     "\n",
     "\n",
-    "[ifrs17sim]: http://lifelib.io/projects/ifrs17sim.html\n",
-    "[lifelib]: http://lifelib.io\n",
+    "[ifrs17sim]: https://lifelib.io/projects/ifrs17sim.html\n",
+    "[lifelib]: https://lifelib.io\n",
     "\n",
     "<div class=\"alert alert-warning\">\n",
     "\n",
