--- a/lifelib/projects/ifrs17sim/ifrs17sim_ifrs_waterfall.ipynb
+++ b/lifelib/projects/ifrs17sim/ifrs17sim_ifrs_waterfall.ipynb
@@ -24,8 +24,8 @@
     "\n",
     "under the senario that actual cashflows are equal to expected. \n",
     "\n",
-    "[ifrs17sim]: http://lifelib.io/projects/ifrs17sim.html\n",
-    "[lifelib]: http://lifelib.io\n",
+    "[ifrs17sim]: https://lifelib.io/projects/ifrs17sim.html\n",
+    "[lifelib]: https://lifelib.io\n",
     "\n",
     "<div class=\"alert alert-warning\">\n",
     "\n",
