ENH: draw_waterfall to create a new figure e by default

--- a/lifelib/projects/ifrs17sim/ifrs17sim_ifrs_waterfall.ipynb
+++ b/lifelib/projects/ifrs17sim/ifrs17sim_ifrs_waterfall.ipynb
@@ -116,7 +116,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model = ifrs17sim.build(load_saved=True)\n",
@@ -147,7 +149,6 @@
     "\n",
     "estcf['EstPremIncome'] = -1 * estcf['EstPremIncome'] \n",
     "\n",
-    "plt.figure()\n",
     "draw_waterfall(estcf, title='Expected Cashflows')"
    ]
   },
@@ -174,7 +175,6 @@
     "\n",
     "df['TransServices'] = -1 * df['TransServices']\n",
     "\n",
-    "plt.figure()\n",
     "draw_waterfall(df, title='CSM Amortization')"
    ]
   },
@@ -205,7 +205,6 @@
     "                'ExpsMaintTotal']:\n",
     "    actcf[outflow] = -1 * actcf[outflow]\n",
     "    \n",
-    "plt.figure()\n",
     "draw_waterfall(actcf, title='Actual Cashflows')"
    ]
   },
@@ -231,7 +230,6 @@
     "\n",
     "ifrspl['InsurServiceExps'] = -1 * ifrspl['InsurServiceExps']\n",
     "\n",
-    "plt.figure()\n",
     "draw_waterfall(ifrspl, title='IFRS17 Profit/Loss')"
    ]
   }
