ENH: Add get_waterfalldata in draw_charts

--- a/lifelib/projects/ifrs17sim/ifrs17sim_ifrs_waterfall.ipynb
+++ b/lifelib/projects/ifrs17sim/ifrs17sim_ifrs_waterfall.ipynb
@@ -88,7 +88,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import ifrs17sim\n",
-    "from draw_charts import draw_waterfall"
+    "from draw_charts import draw_waterfall, get_waterfalldata"
    ]
   },
   {
@@ -140,14 +140,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "estcf = proj.cells['PV_FutureCF',\n",
+    "estcf = get_waterfalldata(\n",
+    "            proj,\n",
+    "            items=['PV_FutureCF',\n",
     "                   'EstPremIncome',\n",
     "                   'EstIntOnCF',\n",
     "                   'EstAcqCashflow',\n",
     "                   'EstClaim',\n",
-    "                   'EstExps'].to_frame(range(3))\n",
-    "\n",
-    "estcf['EstPremIncome'] = -1 * estcf['EstPremIncome'] \n",
+    "                   'EstExps'],\n",
+    "            length=3,\n",
+    "            reverseitems=['EstPremIncome'])\n",
     "\n",
     "draw_waterfall(estcf, title='Expected Cashflows')"
    ]
@@ -168,14 +170,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = proj.cells['CSM_Unfloored',\n",
-    "                'IntAccrCSM',\n",
-    "                'AdjCSM_FlufCF',\n",
-    "                'TransServices'].to_frame(range(3))\n",
+    "csmrf = get_waterfalldata(\n",
+    "            proj, \n",
+    "            items=['CSM_Unfloored',\n",
+    "                   'IntAccrCSM',\n",
+    "                   'AdjCSM_FlufCF',\n",
+    "                   'TransServices'],\n",
+    "            length=3,\n",
+    "            reverseitems=['TransServices'])\n",
     "\n",
-    "df['TransServices'] = -1 * df['TransServices']\n",
-    "\n",
-    "draw_waterfall(df, title='CSM Amortization')"
+    "draw_waterfall(csmrf, title='CSM Amortization')"
    ]
   },
   {
@@ -193,17 +197,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "actcf = proj.cells['AccumCF',\n",
+    "actcf = get_waterfalldata(\n",
+    "            proj,\n",
+    "            items=['AccumCF',\n",
     "                   'PremIncome',\n",
     "                   'IntAccumCF',\n",
     "                   'ExpsAcqTotal',\n",
     "                   'BenefitTotal',\n",
-    "                   'ExpsMaintTotal'].to_frame(range(3))\n",
-    "\n",
-    "for outflow in ['ExpsAcqTotal',\n",
-    "                'BenefitTotal',\n",
-    "                'ExpsMaintTotal']:\n",
-    "    actcf[outflow] = -1 * actcf[outflow]\n",
+    "                   'ExpsMaintTotal'],\n",
+    "            length=3,\n",
+    "            reverseitems=['ExpsAcqTotal',\n",
+    "                       'BenefitTotal',\n",
+    "                       'ExpsMaintTotal'])\n",
     "    \n",
     "draw_waterfall(actcf, title='Actual Cashflows')"
    ]
@@ -223,12 +228,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ifrspl = proj.cells['NetBalance',\n",
-    "                    'InsurRevenue',\n",
-    "                    'InsurServiceExps',\n",
-    "                    'InsurFinIncomeExps'].to_frame(range(5))\n",
-    "\n",
-    "ifrspl['InsurServiceExps'] = -1 * ifrspl['InsurServiceExps']\n",
+    "ifrspl = get_waterfalldata(\n",
+    "            proj,\n",
+    "            items=['NetBalance',\n",
+    "                   'InsurRevenue',\n",
+    "                   'InsurServiceExps',\n",
+    "                   'InsurFinIncomeExps'],\n",
+    "            length=5,\n",
+    "            reverseitems=['InsurServiceExps'])\n",
     "\n",
     "draw_waterfall(ifrspl, title='IFRS17 Profit/Loss')"
    ]
