--- a/lifelib/projects/ifrs17sim/ifrs17sim_csm_waterfall.ipynb
+++ b/lifelib/projects/ifrs17sim/ifrs17sim_csm_waterfall.ipynb
@@ -17,8 +17,8 @@
     "This noteook demonstrates the usage of [ifrs17sim] project in [lifelib], by building and running a model and drawing a waterfall graph of CSM amortization on a single modelpoint.\n",
     "\n",
     "\n",
-    "[ifrs17sim]: http://lifelib.io/projects/ifrs17sim.html\n",
-    "[lifelib]: http://lifelib.io\n",
+    "[ifrs17sim]: https://lifelib.io/projects/ifrs17sim.html\n",
+    "[lifelib]: https://lifelib.io\n",
     "\n",
     "<div class=\"alert alert-warning\">\n",
     "\n",
@@ -65,20 +65,20 @@
     "%matplotlib notebook\n",
     "import collections\n",
     "import pandas as pd\n",
-    "from draw_charts import draw_waterfall\n",
+    "from draw_charts import draw_waterfall, get_waterfalldata\n",
     "import ifrs17sim\n",
     "\n",
     "model = ifrs17sim.build()\n",
-    "\n",
     "proj = model.OuterProj[1]\n",
-    "proj.CSM_Unfloored(15)\n",
     "\n",
-    "df = proj.cells['CSM_Unfloored',   \n",
-    "                'IntAccrCSM',\n",
-    "                'AdjCSM_FlufCF',\n",
-    "                'TransServices'].to_frame(range(15))\n",
-    "\n",
-    "df['TransServices'] = -1 * df['TransServices']\n",
+    "df = get_waterfalldata(\n",
+    "     proj,\n",
+    "     items=['CSM_Unfloored',\n",
+    "            'IntAccrCSM',\n",
+    "            'AdjCSM_FlufCF',\n",
+    "            'TransServices'],\n",
+    "     length=15,\n",
+    "     reverseitems=['TransServices'])\n",
     "\n",
     "draw_waterfall(df)\n",
     "```"
@@ -109,7 +109,7 @@
     "import collections\n",
     "import pandas as pd\n",
     "import ifrs17sim\n",
-    "from draw_charts import draw_waterfall"
+    "from draw_charts import draw_waterfall, get_waterfalldata"
    ]
   },
   {
@@ -128,7 +128,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model = ifrs17sim.build(load_saved=True)"
@@ -179,7 +181,7 @@
     "\n",
     "The code below is to construct a DataFrame object for drawing the waterfall chart, from the cells that make up bars in the waterfall chart.\n",
     "\n",
-    "The last line is to change the sign of `TransServices` values, as we want to draw them as negative values that push down the CSM balance."
+    "`TransServices` is passed to `reverseitems` parameter, to reverse the sign of its values, as we want to draw is as reduction that pushes down the CSM balance."
    ]
   },
   {
@@ -190,12 +192,14 @@
    },
    "outputs": [],
    "source": [
-    "df = proj.cells['CSM_Unfloored',   \n",
-    "                'IntAccrCSM',\n",
-    "                'AdjCSM_FlufCF',\n",
-    "                'TransServices'].to_frame(range(15))\n",
-    "\n",
-    "df['TransServices'] = -1 * df['TransServices']"
+    "df = get_waterfalldata(\n",
+    "     proj,\n",
+    "     items=['CSM_Unfloored',\n",
+    "            'IntAccrCSM',\n",
+    "            'AdjCSM_FlufCF',\n",
+    "            'TransServices'],\n",
+    "     length=15,\n",
+    "     reverseitems=['TransServices'])"
    ]
   },
   {
