--- a/lifelib/projects/ifrs17sim/ifrs17sim_ifrs_waterfall.ipynb
+++ b/lifelib/projects/ifrs17sim/ifrs17sim_ifrs_waterfall.ipynb
@@ -24,8 +24,8 @@
     "\n",
     "under the senario that actual cashflows are equal to expected. \n",
     "\n",
-    "[ifrs17sim]: http://lifelib.io/projects/ifrs17sim.html\n",
-    "[lifelib]: http://lifelib.io\n",
+    "[ifrs17sim]: https://lifelib.io/projects/ifrs17sim.html\n",
+    "[lifelib]: https://lifelib.io\n",
     "\n",
     "<div class=\"alert alert-warning\">\n",
     "\n",
@@ -88,7 +88,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import ifrs17sim\n",
-    "from draw_charts import draw_waterfall"
+    "from draw_charts import draw_waterfall, get_waterfalldata"
    ]
   },
   {
@@ -116,7 +116,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model = ifrs17sim.build(load_saved=True)\n",
@@ -138,16 +140,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "estcf = proj.cells['PV_FutureCF',\n",
+    "estcf = get_waterfalldata(\n",
+    "            proj,\n",
+    "            items=['PV_FutureCF',\n",
     "                   'EstPremIncome',\n",
     "                   'EstIntOnCF',\n",
     "                   'EstAcqCashflow',\n",
     "                   'EstClaim',\n",
-    "                   'EstExps'].to_frame(range(3))\n",
+    "                   'EstExps'],\n",
+    "            length=3,\n",
+    "            reverseitems=['EstPremIncome'])\n",
     "\n",
-    "estcf['EstPremIncome'] = -1 * estcf['EstPremIncome'] \n",
-    "\n",
-    "plt.figure()\n",
     "draw_waterfall(estcf, title='Expected Cashflows')"
    ]
   },
@@ -167,15 +170,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = proj.cells['CSM_Unfloored',\n",
-    "                'IntAccrCSM',\n",
-    "                'AdjCSM_FlufCF',\n",
-    "                'TransServices'].to_frame(range(3))\n",
+    "csmrf = get_waterfalldata(\n",
+    "            proj, \n",
+    "            items=['CSM_Unfloored',\n",
+    "                   'IntAccrCSM',\n",
+    "                   'AdjCSM_FlufCF',\n",
+    "                   'TransServices'],\n",
+    "            length=3,\n",
+    "            reverseitems=['TransServices'])\n",
     "\n",
-    "df['TransServices'] = -1 * df['TransServices']\n",
-    "\n",
-    "plt.figure()\n",
-    "draw_waterfall(df, title='CSM Amortization')"
+    "draw_waterfall(csmrf, title='CSM Amortization')"
    ]
   },
   {
@@ -193,19 +197,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "actcf = proj.cells['AccumCF',\n",
+    "actcf = get_waterfalldata(\n",
+    "            proj,\n",
+    "            items=['AccumCF',\n",
     "                   'PremIncome',\n",
     "                   'IntAccumCF',\n",
     "                   'ExpsAcqTotal',\n",
     "                   'BenefitTotal',\n",
-    "                   'ExpsMaintTotal'].to_frame(range(3))\n",
-    "\n",
-    "for outflow in ['ExpsAcqTotal',\n",
-    "                'BenefitTotal',\n",
-    "                'ExpsMaintTotal']:\n",
-    "    actcf[outflow] = -1 * actcf[outflow]\n",
+    "                   'ExpsMaintTotal'],\n",
+    "            length=3,\n",
+    "            reverseitems=['ExpsAcqTotal',\n",
+    "                       'BenefitTotal',\n",
+    "                       'ExpsMaintTotal'])\n",
     "    \n",
-    "plt.figure()\n",
     "draw_waterfall(actcf, title='Actual Cashflows')"
    ]
   },
@@ -224,14 +228,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ifrspl = proj.cells['NetBalance',\n",
-    "                    'InsurRevenue',\n",
-    "                    'InsurServiceExps',\n",
-    "                    'InsurFinIncomeExps'].to_frame(range(5))\n",
+    "ifrspl = get_waterfalldata(\n",
+    "            proj,\n",
+    "            items=['NetBalance',\n",
+    "                   'InsurRevenue',\n",
+    "                   'InsurServiceExps',\n",
+    "                   'InsurFinIncomeExps'],\n",
+    "            length=5,\n",
+    "            reverseitems=['InsurServiceExps'])\n",
     "\n",
-    "ifrspl['InsurServiceExps'] = -1 * ifrspl['InsurServiceExps']\n",
-    "\n",
-    "plt.figure()\n",
     "draw_waterfall(ifrspl, title='IFRS17 Profit/Loss')"
    ]
   }
